# DocVision

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
src/vision_indexer/: __init__.py  config.py  logging_config.py  main.py
src/vision_indexer/graph/: __init__.py  build_graph.py  export_graph.py  helpers.py  nodes.py  state.py
src/vision_indexer/llm/: __init__.py  image_input.py  page_processor.py  provider.py  topic_indexer.py
src/vision_indexer/memory/: __init__.py  memory_editor.py  memory_store.py
src/vision_indexer/prompts/: __init__.py  framework_memory_prompt.py  page_indexing_prompt.py  page_processing_prompt.py  short_term_memory_prompt.py  topic_index_prompt.py
src/vision_indexer/retry/: retry_policy.py
tests/: __init__.py  fake_llm.py  test_config_timeout.py  test_csv_checkpoint_store.py  test_error_store.py  test_graph_build.py  test_graph_export.py  test_graph_helpers_refactor.py  test_llm_provider.py  test_llm_response_schema.py  test_memory_editor.py  test_memory_store.py  test_no_mock_references.py  test_no_sqlite_references.py  test_page_output_schema.py  test_page_processing_prompt.py  test_pdf_renderer.py  test_pipeline_failure_resume.py  test_pipeline_mock_run.py  test_project_files.py  test_resume_logic.py  test_retry_policy.py  test_root_main_launcher.py  test_run_status_store.py  test_save_failure_status.py  test_token_tracker.py  test_topic_index_batching.py  test_topic_index_failure.py  test_topic_index_prompt.py  test_topic_index_schema.py  test_topic_index_store.py
(+17 files in other folders)
